Feat: get article and abstract from server

--- a/app.html
+++ b/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" {{ HTML_ATTRS }}>
+<html lang="zh-cmn-Hans" {{ HTML_ATTRS }}>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
